# gba_nonogram_advance

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  nonogram_advance.gba  nonogram_advance.sav
.github/workflows/: main.yml
assets/: 10x10.nonos  12x12.nonos  20x10.nonos  22x12.nonos  6x6.nonos  8x8.nonos
gfx/common/sprite/: sprites.aseprite
gfx/game/bg/: 10x10.aseprite  12x12.aseprite  20x10.aseprite  22x12.aseprite  6x6.aseprite  8x8.aseprite  board_pieces.aseprite  confirm.aseprite  grid_10x10.aseprite  grid_12x12.aseprite  grid_20x10.aseprite  grid_22x12.aseprite  grid_8x8.aseprite  numbers.aseprite  pause.aseprite  title.aseprite  win.aseprite
gfx/game/sprite/: congrats.aseprite  nono_10x10.aseprite  nono_12x12.aseprite  nono_20x10.aseprite  nono_22x12.aseprite  nono_6x6.aseprite  nono_8x8.aseprite  number.aseprite
gfx/menu/bg/: 10x10.aseprite  12x12.aseprite  20x10.aseprite  22x12.aseprite  6x6.aseprite  8x8.aseprite  dots.aseprite  dots_bak.aseprite  main.aseprite  polka.aseprite  rect.aseprite  settings.aseprite  settings_delete_save.aseprite  square.aseprite
gfx/menu/sprite/: numbers.aseprite  questionmark.aseprite  (+1 more)
physical/: cartridge_sticker.psd  case front.psd
src/: button_highlight.rs  direction.rs  gfx.rs  input.rs  main.rs  puzzle_size.rs  settings_button_highlight.rs  settings_data.rs  sfx.rs
src/nonos/: _10x10.rs  _12x12.rs  _20x10.rs  _22x12.rs  _6x6.rs  _8x8.rs  calc.rs  mod.rs
src/scenes/: mod.rs  scene_confirm.rs  scene_game_pause.rs  scene_game_puzzle.rs  scene_game_win.rs  scene_menu.rs  scene_puzzle_menu.rs  scene_settings.rs
